--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -36,40 +36,17 @@
             장바구니
           </h2>
 
-          <div class="countDelete"></div>
+          <div class="countDelete">
+            
+          </div>
 
           <section class="listItems"></section>
           
         </div>
   
         
-        <div class="total mt-6">
-          <div class="is-flex is-justify-content-space-between">
-            <div class="block">
-              <h3 class="title is-4 has-text-grey-dark">
-                총액:&nbsp;<span id="priceTotal" class="has-text-danger"
-                  >19,000</span
-                >&nbsp;원
-              </h3>
-              <p class="subtitle is-7"></p>
-            </div>
-            <a href="/order">
-              <button
-                id="btnPurchase"
-                class="button is-danger is-outlined px-6 py-5"
-              >
-                주문하기
-              </button>
-            </a>
-          </div>
-          <a href="/">
-            <button
-              id="btnMoveToItemList"
-              class="button is-danger is-outlined mb-4 px-5"
-            >
-              더 구매하기
-            </button>
-          </a>
+        <div class="totalPriceOrder">
+          
         </div>
         
       </section>
