Update: 유입 경로에 따른 주문 목록 불러오기 구현

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -119,19 +119,16 @@
             <div class="is-align-self-flex-end">
               <h3 class="title is-4 has-text-grey-dark mt-5">
                 <span>총액:</span>
-                <span id="priceTotal" class="has-text-danger">30,000</span>
+                <span id="priceTotalSpan" class="has-text-danger">30,000</span>
                 <span>원</span>
               </h3>
             </div>
-
-            <a href="/order-complete" class="is-flex">
-              <button
-                class="subtitle button is-danger is-outlined py-5 mt-4 mb-6 is-fullwidth is-large"
-                id="purchaseButton"
-              >
-                결제하기
-              </button>
-            </a>
+            <button
+              class="subtitle button is-danger is-outlined py-5 mt-4 mb-6 is-fullwidth is-large"
+              id="purchaseButton"
+            >
+              결제하기
+            </button>
           </div>
         </section>
       </div>
