Cart Filter Update

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -46,7 +46,21 @@
   
         
         <div class="totalPriceOrder">
-          
+          <div class="priceWrap">
+            <div>
+              <h3 class="productCount">
+                총액: <span id="priceTotal" class="priceText"
+                  >19,000</span
+                >&nbsp;원
+              </h3>
+              <p class="subtitle is-7"></p>
+            </div>
+            <a href="/order">
+              <button id="btnPurchase" class="orderBtn">
+                주문하기
+              </button>
+            </a>
+          </div>
         </div>
         
       </section>
