--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -91,11 +91,67 @@
   height: 128px;
 }
 
-.priceInput{
+.quantityInput{
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
+
+.countItem{
+  width: 40%;
+  padding: 4% 16%;
+  margin-right: 4%;
+}
+
+.deleteProduct{
+    display: block;
+    padding: 0.75rem;
+    background-color: rgba(10,10,10,.2);
+    border: none;
+    border-radius: 100%;
+    cursor: pointer;
+    height: 20px;
+    max-height: 20px;
+    max-width: 20px;
+    min-height: 20px;
+    min-width: 20px;
+    outline: 0;
+    position: relative;
+    width: 20px;
+}
+
+.deleteProduct:hover{
+  background-color: rgba(10,10,10,.4);
+
+}
+
+.deleteProduct::before{
+  height: 2px;
+  width: 50%;
+  background-color: #fff;
+  content: "";
+  display: block;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transform-origin: center center;
+}
+
+.deleteProduct::after{
+  height: 2px;
+  width: 50%;
+  background-color: #fff;
+  content: "";
+  display: block;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(130deg);
+  transform-origin: center center;
+}
+
+
 
 /* 하단 */
 .totalPriceOrder{
