--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -149,7 +149,8 @@
           </div> -->
 
           <!-- 제품수정 버튼 -->
-          <button class="submitBtn" id="submitButton">제품 수정하기</button>
+          <button class="submitButton" id="editButton">제품 수정하기</button>
+          <button class="submitButton" id="deleteButton">제품 삭제하기</button>
         </form>
       </div>
       <!-- 푸터 -->
