--- a/src/views/about-us/about-us.html
+++ b/src/views/about-us/about-us.html
@@ -37,106 +37,39 @@
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="">
       <section class="title ftSerif">
-        <h2>About 7</h2>
-        <p class="design">ooo</p>
-        <p class="line"></p>
+        <h2>About ojakkyu</h2>
+        <!-- <p class="line"></p> -->
+        <!-- <p class="design">열두달 이야기</p> -->
       </section>
-      <div class="slideWrap">
-        <section class="businessCardWrap">
-          <div id="slider">
-            <div class="image-box">
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <div><img src="../images/film layout.png" alt="film" /></div>
-              <!--   clone     -->
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
-              <div class="clone">
-                <img src="../images/film layout.png" alt="film" />
-              </div>
+
+      <section class="description ftSerif">
+        <!-- <div class="subtitle">
+          'ojakkyu'는 칠월칠석일에 두 사람을 연결해주는 오작교에서 시작된
+          이름입니다.
+        </div> -->
+
+        <div class="contents">
+          <div class="contentsIn">
+            <div class="topContents">
+              안녕하세요. <br />
+              브랜드 오작뀨입니다. 이렇게 인사를 드리게되어 영광입니다.
+              <br /><br />
+
+              오작뀨는 인연을 연결하는 다리에서 유래하여 <br />
+              연인뿐만 아니라 친구, 가족 모든 사람의 연결고리가 되고자 합니다.
+            </div>
+            <div class="bottomContents">
+              행복, 용기, 건강, 성공 <br /><br />
+
+              오작뀨에서는 아름다운 꽃말만큼이나 <br />
+              다양한 의미를 지닌 '열두달의 이야기 시리즈'를<br />
+              만나보실 수 있습니다. <br /><br />
+
+              늘 함께 할 수 있는 반지, 팔찌, 목걸이를 <br />
+              소중한 사람에게 선물해 주세요.
             </div>
           </div>
-          <div class="businessCardWrapInner">
-            <div class="card">
-              <h3 class="ftSerif name">유의석</h3>
-              <p class="tech">Back-end</p>
-              <div class="description">
-                <p>Lorem ipsum dolor sit amet</p>
-                <p></p>
-                <p></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <h3 class="ftSerif name">김진영</h3>
-              <p class="tech">Front-end</p>
-              <div class="description">
-                <p>Lorem ipsum dolor sit amet</p>
-                <p></p>
-                <p></p>
-                <p></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <h3 class="ftSerif name">이다노</h3>
-              <p class="tech">Front-end</p>
-              <div class="description">
-                <p>Lorem ipsum dolor sit amet</p>
-                <p></p>
-                <p></p>
-                <p></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <h3 class="ftSerif name">이유정</h3>
-              <p class="tech">Front-end</p>
-              <div class="description">
-                <p>재밌는 작업이 많은 프로젝트였습니다.</p>
-                <p>모두 수고하셨습니다!!</p>
-              </div>
-            </div>
-
-            <div class="card">
-              <h3 class="ftSerif name">정지헌</h3>
-              <p class="tech">Back-end</p>
-              <div class="description">
-                <p>Lorem ipsum dolor sit amet</p>
-                <p></p>
-                <p></p>
-                <p></p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-      <section>
-        <div class="ending ftSerif">감사합니다.</div>
+        </div>
       </section>
     </main>
     <!-- 푸터 -->
