--- a/src/views/account-order/account-order.html
+++ b/src/views/account-order/account-order.html
@@ -20,8 +20,8 @@
     ></script>  
 
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="order-result.css" />
-    <script src="order-result.js" type="module" defer></script>
+    <link rel="stylesheet" href="account-order.css" />
+    <script src="account-order.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
