--- a/src/views/birthstone/birthstone.css
+++ b/src/views/birthstone/birthstone.css
@@ -2,281 +2,78 @@
 @import '../styles/reset.css';
 
 body {
-  background: #aaa;
-  font-family: 'Open Sans', sans-serif;
+  background-color: rgba(233, 150, 150, 0.2);
 }
 
-.slider {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-  background: #777;
-  overflow: hidden;
-}
-.slider__wrap {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  transform: translateX(100vw);
-  top: 0%;
-  left: 0;
-  right: auto;
-  overflow: hidden;
-  transition: transform 450ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  transform-origin: 0% 50%;
-  transition-delay: 450ms;
-  opacity: 0;
-}
-.slider__wrap--hacked {
-  opacity: 1;
-}
-.slider__back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-size: auto 100%;
-  background-position: center;
-  background-repeat: none;
-  transition: filter 450ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-}
-.slider__inner {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0%;
-  background-size: auto 133.3333%;
-  background-position: center;
-  background-repeat: none;
-  transform: scale(0.75);
-  transition: transform 450ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
-    box-shadow 450ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
-    opacity 450ms step-end;
-  opacity: 0;
-  box-shadow: 0 3vh 3vh rgba(0, 0, 0, 0);
-  padding: 15vh;
+main {
   box-sizing: border-box;
+  padding: 10px;
 }
-.slider__content {
+
+section ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+li {
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+
   position: relative;
-  top: 50%;
-  width: auto;
-  transform: translateY(-50%);
+}
+
+li:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+h2 {
   color: white;
-  opacity: 0;
-  transition: opacity 450ms;
-}
-.slider__content h1 {
-  font-size: 3vh;
-  font-family: 'Noto Serif KR', serif;
-  line-height: 0.85;
-  margin-bottom: 0.75vh;
-  pointer-events: none;
-  text-shadow: 1px 1px 1px black;
-}
-.slider__content a {
-  cursor: pointer;
-  font-size: 2.4vh;
-  letter-spacing: 0.3vh;
-  font-weight: 100;
-  position: relative;
-  text-shadow: 1px 1px 1px black;
-}
-.slider__content a:after {
-  content: '';
-  display: block;
-  width: 9vh;
-  background: white;
-  height: 1px;
+  text-shadow: 1px 1px 1px gray;
+
   position: absolute;
-  top: 50%;
-  left: 6vh;
-  transform: translateY(-50%);
-  transform-origin: 0% 50%;
-  transition: transform 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  right: 5px;
+  bottom: 5px;
 }
-.slider__content a:before {
-  content: '';
-  border-top: 1px solid white;
-  border-right: 1px solid white;
-  display: block;
-  width: 1vh;
-  height: 1vh;
-  transform: translateX(0) translateY(-50%) rotate(45deg);
-  position: absolute;
-  font-family: sans-serif;
-  font-weight: 100;
-  top: 50%;
-  left: 15vh;
-  transition: transform 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-}
-.slider__content a:hover:after {
-  transform: scaleX(1.5);
-  transition: transform 1200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-}
-.slider__content a:hover:before {
-  transform: translateX(6vh) translateY(-50%) rotate(45deg);
-  transition: transform 1200ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-}
-.slider__slide {
-  position: absolute;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  transition: transform 600ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  transition-delay: 600ms;
-  pointer-events: none;
-  z-index: 0;
-}
-.slider__slide--active {
-  transform: translatex(0%);
-  z-index: 2;
-}
-.slider__slide--active .slider__wrap {
-  transform: translateX(0);
-  transform-origin: 100% 50%;
-  opacity: 1;
-  -webkit-animation: none;
-  animation: none;
-}
-.slider__slide--active .slider__back {
-  filter: blur(1.5vh);
-  transition: filter 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  transition-delay: 900ms !important;
-}
-.slider__slide--active .slider__inner {
-  transform: scale(0.8);
-  box-shadow: 0 1vh 6vh rgba(0, 0, 0, 0.2);
-  pointer-events: auto;
-  opacity: 1;
-  transition: transform 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
-    box-shadow 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
-    opacity 1ms step-end;
-  transition-delay: 900ms;
-}
-.slider__slide--active .slider__content {
-  opacity: 1;
-  transition-delay: 1350ms;
-}
-.slider__slide:not(.slider__slide--active) .slider__wrap {
-  -webkit-animation-name: hack;
-  animation-name: hack;
-  -webkit-animation-duration: 900ms;
-  animation-duration: 900ms;
-  -webkit-animation-delay: 450ms;
-  animation-delay: 450ms;
-  -webkit-animation-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
-  animation-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
-}
-@-webkit-keyframes hack {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  50% {
-    transform: translateX(-100vw);
-    opacity: 1;
-  }
-  51% {
-    transform: translateX(-100vw);
-    opacity: 0;
-  }
-  52% {
-    transform: translateX(100vw);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(100vw);
-    opacity: 1;
-  }
-}
-@keyframes hack {
-  0% {
-    transform: translateX(0);
-    opacity: 1;
-  }
-  50% {
-    transform: translateX(-100vw);
-    opacity: 1;
-    -webkit-transform: translateX(-100vw);
-    -moz-transform: translateX(-100vw);
-    -ms-transform: translateX(-100vw);
-    -o-transform: translateX(-100vw);
-  }
-  51% {
-    transform: translateX(-100vw);
-    opacity: 0;
-  }
-  52% {
-    transform: translateX(100vw);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(100vw);
-    opacity: 1;
-  }
-}
-.slider__slide:nth-child(1) .slider__back,
-.slider__slide:nth-child(1) .slider__inner {
+
+/* background-images */
+.top li:nth-child(1) {
   background-image: url(https://images.unsplash.com/photo-1647233061722-43de3bee81e7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 }
-.slider__slide:nth-child(2) .slider__back,
-.slider__slide:nth-child(2) .slider__inner {
+.top li:nth-child(2) {
   background-image: url(https://images.unsplash.com/photo-1603561596973-8166e9e089d1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 }
-.slider__slide:nth-child(3) .slider__back,
-.slider__slide:nth-child(3) .slider__inner {
+.top li:nth-child(3) {
   background-image: url(https://images.unsplash.com/photo-1646371294334-d4a342578cf4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
 }
 
-.slider__slide:nth-child(4) .slider__back,
-.slider__slide:nth-child(4) .slider__inner {
+.top li:nth-child(4) {
   background-image: url(https://images.unsplash.com/photo-1607703829739-c05b7beddf60?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80);
 }
-.slider__slide:nth-child(5) .slider__back,
-.slider__slide:nth-child(5) .slider__inner {
+.middle li:nth-child(1) {
   background-image: url(https://images.unsplash.com/photo-1667013878745-e95d52596ab4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 }
-.slider__slide:nth-child(6) .slider__back,
-.slider__slide:nth-child(6) .slider__inner {
+.middle li:nth-child(2) {
   background-image: url(https://images.unsplash.com/photo-1667013878607-908d67e88488?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 }
 
-.slider__slide:nth-child(7) .slider__back,
-.slider__slide:nth-child(7) .slider__inner {
+.middle li:nth-child(3) {
   background-image: url(https://images.unsplash.com/photo-1617191880362-aac615de3c26?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1125&q=80);
 }
-.slider__slide:nth-child(8) .slider__back,
-.slider__slide:nth-child(8) .slider__inner {
+.middle li:nth-child(4) {
   background-image: url(https://images.unsplash.com/photo-1620360094127-854a67f8c959?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
 }
-.slider__slide:nth-child(9) .slider__back,
-.slider__slide:nth-child(9) .slider__inner {
+.bottom li:nth-child(1) {
   background-image: url(https://images.unsplash.com/photo-1612314317004-d650718f188a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
 }
 
-.slider__slide:nth-child(10) .slider__back,
-.slider__slide:nth-child(10) .slider__inner {
+.bottom li:nth-child(2) {
   background-image: url(https://images.unsplash.com/photo-1657869208369-6d6e7f5b7013?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80);
 }
-.slider__slide:nth-child(11) .slider__back,
-.slider__slide:nth-child(11) .slider__inner {
+.bottom li:nth-child(3) {
   background-image: url(https://images.unsplash.com/photo-1611955167811-4711904bb9f8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
 }
-.slider__slide:nth-child(12) .slider__back,
-.slider__slide:nth-child(12) .slider__inner {
+.bottom li:nth-child(4) {
   background-image: url(https://images.unsplash.com/photo-1632670549383-b6cb26370221?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-}
-
-.sig {
-  position: fixed;
-  bottom: 8px;
-  right: 8px;
-  text-decoration: none;
-  font-size: 12px;
-  font-weight: 100;
-  font-family: sans-serif;
-  color: rgba(255, 255, 255, 0.4);
-  letter-spacing: 2px;
-  z-index: 9999;
 }
