Style: birthstone header, footer

--- a/src/views/birthstone/birthstone.html
+++ b/src/views/birthstone/birthstone.html
@@ -27,7 +27,7 @@
   </head>
   <body class="error">
     <!-- 헤더 -->
-    <!-- <div data-include-path="../components/header.html"></div> -->
+    <div id="header"></div>
 
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container">
@@ -82,6 +82,6 @@
     </main>
 
     <!-- 푸터 -->
-    <!-- <div data-include-path="../components/footer.html"></div> -->
+    <div id="footer"></div>
   </body>
 </html>
