--- a/src/views/birthstone/birthstone.css
+++ b/src/views/birthstone/birthstone.css
@@ -6,11 +6,10 @@ body {
 }
 
 main {
-  box-sizing: border-box;
   padding: 10px;
 }
 
-section ul {
+main ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
