--- a/src/views/birthstone/birthstone.css
+++ b/src/views/birthstone/birthstone.css
@@ -16,11 +16,20 @@ main ul {
 }
 
 main li {
+  position: relative;
   height: 300px;
+
   background-size: cover;
   background-position: center;
 
-  position: relative;
+  border-radius: 5px;
+  box-shadow: 1px 1px 4px grey;
+  filter: brightness(1.15);
+  -webkit-filter: brightness(1.15);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
 
 main li:not(:last-child) {
