Style: add fontawesome path

--- a/src/views/account-signout/account-signout.html
+++ b/src/views/account-signout/account-signout.html
@@ -13,6 +13,13 @@
       sizes="16x16"
       href="/elice-rabbit-favicon.png"
     />
+
+    <script
+      defer
+      src="https://kit.fontawesome.com/9daa42bcef.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- bulma css 관련 -->
     <link
       rel="stylesheet"
