--- a/src/views/birthstone/birthstone.html
+++ b/src/views/birthstone/birthstone.html
@@ -13,6 +13,12 @@
       href="../images/facon.ico"
     />
 
+    <script
+      defer
+      src="https://kit.fontawesome.com/9daa42bcef.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
