--- a/src/views/components/footer.html
+++ b/src/views/components/footer.html
@@ -184,7 +184,7 @@
             <a href="#">이메일주소 무단수집 거부</a>
           </li>
           <li>
-            <a href="#">채용</a>
+            <a href="https://elice.career.greetinghr.com/">채용</a>
           </li>
 
           <li>
