Style: 상품 수정 페이지 작업

--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -6,7 +6,23 @@
     <title>sign up</title>
 
     <!-- 아이콘 -->
+    <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/elice-rabbit-favicon.png"
+  />
 
+  <script
+  defer
+  src="https://kit.fontawesome.com/9daa42bcef.js"
+  crossorigin="anonymous"
+></script>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
+
+    <!-- 커스텀 css, js -->
+    <link rel="stylesheet" href="./product-add.css" />
     <script src="./product-add.js" type="module"></script>
   </head>
 
