--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="./product-edit.js" type="module"></script>
 
-    <title>sign up</title>
+    <title>product edit</title>
 
     <!-- 아이콘 -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/elice-rabbit-favicon.png"
+    />
+    <script
+    defer
+    src="https://kit.fontawesome.com/9daa42bcef.js"
+    crossorigin="anonymous"
+  ></script>
+  <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
+
+    <!-- 커스텀 css, js -->
+    <link rel="stylesheet" href="./product-edit.css" />
+    <script src="./product-edit.js" type="module"></script>
   </head>
   
   <body>
