--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -51,8 +51,8 @@
           <div class="priceWrap">
             <div>
               <h3 class="productCount">
-                총액: <span id="priceTotal" class="priceText"
-                  >19,000</span
+                총액: <span class="priceText"
+                  ></span
                 >&nbsp;원
               </h3>
             </div>
