--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../images/facon.ico"
+      href="/images/facon.ico"
     />
 
     <!-- bulma css -->
@@ -34,8 +34,9 @@
     <div id="header"></div>
 
     <!-- 바디 -->
-    <main role="main" id="mainWrap" class="container is-max-desktop">
-      <div class="mainInner px-6 box mt-6">
+    <main role="main">
+      
+      <div class="orderWrap">
         <section class="title-sub mt-2">
           <h2 class="title mb-5 has-text-grey-dark has-text-centered">
             주문/결제
