--- a/src/views/components/footer.html
+++ b/src/views/components/footer.html
@@ -19,6 +19,8 @@
         width: 100%;
         padding-top: 100px;
 
+        text-align: center;
+
         justify-self: self-end;
       }
 
@@ -78,14 +80,14 @@
         padding-top: 40px;
       }
 
-      footer address .addressLink {
+      /* footer address .addressLink {
         display: flex;
         gap: 10px;
-      }
+      } */
 
       footer address .addressLink li {
         padding-right: 10px;
-        border-right: 1px solid #a0a0a0;
+        /* border-right: 1px solid #a0a0a0; */
       }
 
       .addressLink li:nth-of-type(4) a,
@@ -127,42 +129,12 @@
       <address>
         <ul class="addressLink">
           <li>
-            <a href="#">오작뀨 쥬얼리 몰 소개</a>
-          </li>
-          <li>
-            <a href="#">이용약관</a>
-          </li>
-          <li>
-            <a href="#">이메일주소 무단수집 거부</a>
-          </li>
-          <li>
-            <a href="https://elice.career.greetinghr.com/">채용</a>
-          </li>
-
-          <li>
-            <a href="#">사이트맵</a>
+            <a href="../about-us/about-us.html">오작뀨 쥬얼리 몰 소개</a>
           </li>
         </ul>
 
         <div class="addressText">
-          <p>
-            english speaking club at church street library (in-person and
-            online), 처치 스트리트 도서관
-          </p>
-          <p>
-            대표이사 : 유의석 | 사업자등록번호 : 110-3030-2020 | 통신판매업
-            신고번호 : 2007-London-3203 | 사업자정보확인
-          </p>
-          <p>
-            <strong style="font-size: 14px; font-weight: 600; cursor: pointer"
-              >고객상담센터</strong
-            >
-            : 031-320-5000(유료) |
-            <span style="color: #d1d1d1; font-weight: 600; cursor: pointer"
-              >개인정보처리방침 | 방침 개정 안내 | 입찰공고</span
-            >
-          </p>
-          <p class="copyLight">
+          <p class="copyRight">
             Copyright © 오작뀨 Corporation. All rights reserved.
           </p>
         </div>
