Style: product-edit.css

--- a/src/views/product-edit/product-edit.css
+++ b/src/views/product-edit/product-edit.css
@@ -8,16 +8,18 @@ main {
 }
 
 h2 {
-  margin-bottom: 46px;
+  margin-bottom: 40px;
 
   text-align: center;
+  font-size: 2em;
+  font-weight: bold;
   color: rgb(87, 86, 86);
 }
 
 .formInputs {
   display: grid;
   justify-content: center;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(400px, auto) minmax(400px, auto);
   gap: 20px;
 }
 
@@ -31,7 +33,7 @@ input::placeholder {
 
 input {
   margin-bottom: 6px;
-  padding: 20px 40px;
+  padding: 30px 40px;
   width: 100%;
   box-sizing: border-box;
 
@@ -55,7 +57,7 @@ button:hover {
 }
 
 button {
-  padding: 20px 0;
+  padding: 30px 0;
 
   color: #f24f70;
 
@@ -66,7 +68,7 @@ button {
 }
 
 .buttons {
-  margin-top: 40px;
+  margin-top: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: center;
