--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -1,105 +1,33 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>카테고리 제품 페이지</title>
 
-    <link rel="stylesheet" href="./product.css">
+    <link rel="stylesheet" href="./product.css" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/images/facon.ico"
-    />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/facon.ico" />
+    <script src="product.js" type="module"></script>
+  </head>
 
-    <!-- css 안먹나? -->
-    <!-- <style>
-        @import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Stick+No+Bills:wght@400;500;700&display=swap");
-        @font-face {
-            font-family: "OKDDUNG";
-            src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/OKDDUNG.woff2")
-            format("woff2");
-            font-weight: normal;
-            font-style: normal;
-        }
-        html, body, div, span, applet, object, iframe,
-        h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-        a, abbr, acronym, address, big, cite, code,
-        del, dfn, em, img, ins, kbd, q, s, samp,
-        small, strike, strong, sub, sup, tt, var,
-        b, u, i, center,
-        dl, dt, dd, ol, ul, li,
-        fieldset, form, label, legend,
-        table, caption, tbody, tfoot, thead, tr, th, td,
-        article, aside, canvas, details, embed, 
-        figure, figcaption, footer, header, hgroup, 
-        menu, nav, output, ruby, section, summary,
-        time, mark, audio, video {
-            margin: 0;
-            padding: 0;
-            border: 0;
-            font-size: 100%;
-            font: inherit;
-            vertical-align: baseline;
-        }
-
-        ol,
-        ul,li {
-            list-style: none;
-        }
-        a {
-            text-decoration: none;
-        }
-        a:link {
-            text-decoration: none;
-            color: black;
-        }
-        a:visited {
-            color: black;
-        }
-        h1 {
-            font-family: "OKDDUNG";
-        }
-        .hidden {
-            visibility: hidden;
-        }
-        article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,
-        section {
-            display: block;
-        }
-        body {
-            line-height: 1;
-        }
-       
-    </style> -->
-
-</head>
-
-<body>
+  <body>
     <div id="header"></div>
 
-
     <section class="categoryWrap">
-        <div class="categoryTitle">
-            <h1>14k 팔찌</h1>
-        </div>
-        
-        <article>
-            <ul class="product"> 
-            </ul>
-        </article>
-        
-        <div>
-            <a href="http://localhost:3000/product/add">상품 추가하기</a>
-        </div>
+      <div class="categoryTitle">
+        <h1>14k 팔찌</h1>
+      </div>
+
+      <article>
+        <ul class="product"></ul>
+      </article>
+
+      <div>
+        <a href="http://localhost:3000/product/add">상품 추가하기</a>
+      </div>
     </section>
-    
-    
+
     <div id="footer"></div>
-    
-    
-    <script src="product.js" type="module"></script>
-</body>
+  </body>
 </html>
