Update: 카테고리 페이지 상품 클릭 로직 추가

--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -20,7 +20,7 @@
       </div>
 
       <article>
-        <ul class="product"></ul>
+        <ul class="product" id="productWrapper"></ul>
       </article>
 
       <div>
