Update: admin 여부에 따른 상품 수정 버튼 렌더링 구현

--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -28,15 +28,12 @@
             </ul>
           </div>
           <li>
-            <div class="buttonWrapper" id="#buttonWrapper">
+            <div class="buttonWrapper" id="buttonWrapper">
               <button type="button" id="purchaseButton" class="moveOrder">
                 구매하기
               </button>
               <button type="button" id="adCartButton" class="moveCart">
                 장바구니 추가하기
-              </button>
-              <button type="button" id="editProductButton" class="editProduct">
-                상품수정
               </button>
             </div>
           </li>
