--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -22,7 +22,7 @@
             <ul class="productDesc" id="productDesc">
               <li>
                 <label>이니셜 각인 : </label>
-                <input type="text" maxlength="8" id="initialInput" />
+                <input type="text" maxlength="8" id="initialInput" required/>
                 <label>최대 8글자</label>
               </li>
             </ul>
