--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -22,6 +22,11 @@
       <article>
         <ul class="product" id="productWrapper"></ul>
       </article>
+      
+      <div class="pages">
+        <ul class="pagelist" id="pagelist">
+        </ul>
+      </div>
 
       <div>
         <a href="/product/add">상품 추가하기</a>
