--- a/src/views/cart/cart.css
+++ b/src/views/cart/cart.css
@@ -215,3 +215,20 @@
   border-color: #f14668;
   color: #fff;
 }
+
+/* 빈 카트 */
+.emptyCart{
+  background-color: #fff;
+  border-radius: 6px;
+  box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+  color: #4a4a4a;
+  padding: 4em;
+  width: 1080px;
+  height: 600px;
+  margin: 4% auto 0;
+  text-align: center;
+}
+
+.emptyCart h1{
+  font-size: 4rem;
+}
