--- a/src/views/product/product.css
+++ b/src/views/product/product.css
@@ -39,3 +39,20 @@
   transform: scale(1.05);
   transition: all 0.4s;
 }
+
+.birthStoneWrapper {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.birthStoneWrapper ul li {
+  float: left;
+}
+.birthStoneWrapper ul li button {
+  width: 75px;
+  height: 50px;
+  margin: 0 10px;
+}
