--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -71,10 +71,9 @@
       <article>
         <ul class="product" id="productWrapper"></ul>
       </article>
-      
-      <div class="pages">
-        <ul class="pagelist" id="pagelist">
-        </ul>
+
+      <div class="pageWrapper">
+        <ul class="pagelist" id="pagelist"></ul>
       </div>
 
       <div>
