Css Update Components Update

--- a/src/views/account-info/account-info.html
+++ b/src/views/account-info/account-info.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
@@ -199,6 +199,6 @@
       </div>
     </main>
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
