--- a/src/views/account-order/account-order.html
+++ b/src/views/account-order/account-order.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
     <!-- 바디 -->
     <section class="section">
       <div class="container orders-container">
@@ -52,6 +52,6 @@
     </section>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
