--- a/src/views/account-signout/account-signout.html
+++ b/src/views/account-signout/account-signout.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
     <!-- 바디 -->
     <div class="register-user-form-container">
       <form class="box register-user-form-box" id="registerUserForm">
@@ -89,6 +89,6 @@
     </div>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
