--- a/src/views/birthstone/birthstone.html
+++ b/src/views/birthstone/birthstone.html
@@ -33,7 +33,7 @@
   </head>
   <body class="error">
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container">
@@ -88,6 +88,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
