--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -24,7 +24,7 @@
 
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>>
 
     <main role="main">
 
@@ -71,6 +71,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
