--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../images/facon.ico"
+      href="/images/facon.ico"
     />
 
     <link rel="stylesheet" href="home.css" />
@@ -18,11 +18,11 @@
 
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 비주얼 배너 -->
     <article class="visualBanner">
-      <img src="../images/visualBanner1.png" alt="visulaImage" />
+      <img src="/images/visualBanner1.png" alt="visulaImage" />
     </article>
 
     <!-- 메인 -->
@@ -31,10 +31,10 @@
       <section class="contentsOne">
         <ul>
           <li>
-            <img src="../images/eventContents1.png" alt="Fast shipping" />
+            <img src="/images/eventContents1.png" alt="Fast shipping" />
           </li>
-          <li><img src="../images/eventContents2.png" alt="Review event" /></li>
-          <li><img src="../images/eventContents3.png" alt="Custom carve" /></li>
+          <li><img src="/images/eventContents2.png" alt="Review event" /></li>
+          <li><img src="/images/eventContents3.png" alt="Custom carve" /></li>
         </ul>
       </section>
 
@@ -42,13 +42,13 @@
       <section class="contentsSec">
         <article>
           <iframe
-            title="#"
+            title="youtube"
             width="600"
             height="360"
             src="https://www.youtube.com/embed/CWTwiE15pdY"
           >
-            <a href="../images/iframe.jpg" target="img">
-              <img src="../images/iframe.jpg" alt="iframe" />
+            <a href="/images/iframe.jpg" target="img">
+              <img src="/images/iframe.jpg" alt="iframe" />
             </a>
           </iframe>
 
@@ -56,13 +56,13 @@
             <div>
               <p>
                 GIFT FOR MEMORY<br />
-                <span class="subText"
-                  >당신의 소중한 사람에게 <br />
-                  단 하나뿐인 기억을 선물하세요. <br />
+                <span class="subText">
+                  # 당신의 소중한 사람에게 <br />
+                  <strong> 단 하나뿐인 기억을 선물하세요.</strong>
                 </span>
-                <span class="hashTag">
+                <!-- <span class="hashTag">
                   #세상에하나뿐인둘만의추억#선물#기억을선물한다<br />#커스텀쥬얼리#기념선물
-                </span>
+                </span> -->
               </p>
             </div>
           </div>
@@ -71,7 +71,11 @@
 
       <!-- 세 번째 컨텐츠 -->
       <section class="newArrival">
-        <strong>NEW ARRIVAL</strong>
+        <div class="arrivalTitle">
+          <strong>NEW ARRIVAL</strong>
+          <p>오작뀨의 신상 아이템</p>
+        </div>
+        
         <article class="productWrap">
           <ul class="product"></ul>
         </article>
@@ -79,6 +83,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
