--- a/src/views/product-add/product-add.html
+++ b/src/views/product-add/product-add.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 회원가입 폼(Form) -->
     <main role="main" id="addProductSection">
@@ -143,6 +143,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
