--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <section class="container">
       <article class="detailWrap">
@@ -42,6 +42,6 @@
     </section>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
