--- a/src/views/product-edit/product-edit.html
+++ b/src/views/product-edit/product-edit.html
@@ -22,7 +22,7 @@
   
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 제품 수정 폼(Form) -->
     <main role="main" id="addProductSection">
@@ -173,6 +173,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
