--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div id="header"></div>
+    <header id="header"></header>
 
     <section class="categoryWrap">
       <div class="categoryTitle">
@@ -77,6 +77,6 @@
       </div>
     </section>
 
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
