--- a/src/views/styles/reset.css
+++ b/src/views/styles/reset.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Stick+No+Bills:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Marhey:wght@400;500;600;700&display=swap');
 @font-face {
   font-family: "OKDDUNG";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/OKDDUNG.woff2")
