--- a/src/views/about-us/about-us.html
+++ b/src/views/about-us/about-us.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="">
       <section class="title ftSerif">
@@ -73,6 +73,6 @@
       </section>
     </main>
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
