--- a/src/views/admin-order/admin-order.html
+++ b/src/views/admin-order/admin-order.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section id="orderContainer">
@@ -43,6 +43,6 @@
         </div>
     </main>
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
