--- a/src/views/order-complete/order-complete.html
+++ b/src/views/order-complete/order-complete.html
@@ -33,7 +33,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
     <!-- 바디 -->
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section class="orderComplete">
@@ -55,6 +55,6 @@
       </section>
     </main>
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
