--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -31,7 +31,7 @@
 
   <body class="cartOrder">
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 바디 -->
     <main role="main">
@@ -136,6 +136,6 @@
     </main>
 
     <!-- 푸터 -->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
   </body>
 </html>
