--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <div id="header"></div>
+    <header id="header"></header>
 
     <!-- 회원가입 폼(Form) -->
     <section id="signupContainer">
@@ -134,7 +134,7 @@
         </form>
       </div>
       <!-- 푸터 -->
-      <div id="footer"></div>
+      <footer id="footer"></footer>
     </section>
   </body>
 </html>
